lab1/Test/L1-A-0-87.cmm
float Odk_Ux8UXge [ 1595943327 ] [ 927557718 ] [ #
  596723841 ] [ 79824011 ] [ 1391918147 ] , WmYEQpjczixKsp 

;
struct RndLy ;
int ;
int Aumm 
;%
